[gd_scene load_steps=9 format=3 uid="uid://bf3fe4o05ua20"]

[ext_resource type="Script" path="res://UI/WindowUI/Header/header.gd" id="1_a2eh7"]
[ext_resource type="FontFile" uid="uid://cmbf3fsdcpk2b" path="res://Fonts/Ac437_IBM_Model3x_Alt2.ttf" id="2_exemx"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/IconBtn/IconBtn.tscn" id="3_8hswi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ejy0"]
bg_color = Color(0, 0, 0, 0)
border_width_bottom = 2
border_color = Color(0, 0.529412, 0.278431, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2o2f5"]

[sub_resource type="LabelSettings" id="LabelSettings_vemqa"]
font = ExtResource("2_exemx")
font_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ko5y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bua8p"]

[node name="Header" type="PanelContainer"]
custom_minimum_size = Vector2(0, 30)
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1ejy0")
script = ExtResource("1_a2eh7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LabelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2o2f5")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LabelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/LabelContainer/MarginContainer"]
layout_mode = 2

[node name="IconBtn" parent="HBoxContainer/LabelContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_8hswi")]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5
icon = 3

[node name="Label" type="Label" parent="HBoxContainer/LabelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_vemqa")

[node name="FocusContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_5ko5y")

[node name="BtnContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bua8p")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/BtnContainer"]
layout_mode = 2

[node name="MaxBtn" parent="HBoxContainer/BtnContainer/HBoxContainer" instance=ExtResource("3_8hswi")]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5
icon = 14

[node name="CloseBtn" parent="HBoxContainer/BtnContainer/HBoxContainer" instance=ExtResource("3_8hswi")]
visible = false
layout_mode = 2
icon = 1
